[B]Version 1.1.141[/B]
- tnaflix - fix thumbnails, playback
- peekvids - fix playback
- playvids - fix playback