@@ -161,13 +161,17 @@ def Play(url, name, download=None):
         return
 
     vp = utils.VideoPlayer(name, download=download, regex='"file":"([^"]+)"', direct_regex='file:"([^"]+)"')
-    match = re.compile(r'''<iframe[^>]+src=['"]([^'"]+)['"]''', re.DOTALL | re.IGNORECASE).findall(videohtml)
+    match = re.compile(r'''<iframe[^>]+src=['"](h[^'"]+)['"]''', re.DOTALL | re.IGNORECASE).findall(videohtml)
 
     playerurl = match[0]
-
     if vp.resolveurl.HostedMediaFile(playerurl).valid_url():
         vp.play_from_link_to_resolve(playerurl)
         return
+    elif '/player-x.php?q=' in playerurl:
+        vurl = playerurl.split('?q=')[-1]
+        vurl = utils._bdecode(vurl)
+        vurl = urllib_parse.unquote_plus(vurl)
+        videolink = vurl.split('source src="')[-1].split('"')[0] + '|referer=' + siteurl
     elif 'klcams.com' in playerurl:
         videohtml = utils.getHtml(playerurl, url)
 
@@ -206,7 +210,7 @@ def Play(url, name, download=None):
         embedhtml = utils.getHtml(playerurl, url)
         match = re.compile(r"video_url:\s*'([^']+)'", re.DOTALL | re.IGNORECASE).findall(embedhtml)
         if match:
-            videolink = match[0]
+            videolink = match[0] + '|referer=' + siteurl
             vp.play_from_direct_link(videolink)
     else:
         playerhtml = utils.getHtml(playerurl, url)
